Fixed map overlap problem with sizing and preventing code from firing four times.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -9,3 +9,9 @@
 p.timepicker {
   margin: 10px 0;
 }
+
+.map {
+  height: 500px;
+  width: 750px;
+  margin: 0 auto;
+}
